Pantheon desktop fixes
Fix level bar not showing in pantheon desktop
Fix wrong accent color in file manager

--- a/gtk-3.0/apps/_pantheon.scss
+++ b/gtk-3.0/apps/_pantheon.scss
@@ -281,3 +281,26 @@ LibraryWindow {
       0 1px 2px transparentize(#000, 0.77);
 }
 
+/**level bars**/
+
+.sidebar .source-list{
+  &.view {
+    &.level-bar {
+      &,&:selected,&:selected:focus{
+        background-color: lighten($_sidebar_color, 15%);
+        border: 1px solid transparentize(black, 0.86);
+        box-shadow: 0 1px 0 transparentize(#000, 0.75);
+        border-radius: 2px;
+      }
+      &.fill-block{
+        border: none;
+      }
+    }
+    &.fill-block{
+      &,&:hover,&:selected,&:selected:focus{
+        background-image: none;
+        background-color: $yellow;
+      }
+    }
+  }
+}
